--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-ui-router": "^0.2.15",
+    "bootstrap": "^3.3.7",
     "lodash": "^3.8.0",
     "ng-redux": "^3.4.0-beta.1",
     "node-sass": "^3.8.0",
